[No user story](Erik Edeskog)[Fixed so news is visible in historyviews]

--- a/vITalAngular/src/app/views/history/history.component.css
+++ b/vITalAngular/src/app/views/history/history.component.css
@@ -57,3 +57,15 @@
     padding-bottom: 20px;
     background-color: #D8D8D8;
 }
+
+.newsscore1 {
+    background-color: #FFF1AB;
+}
+
+.newsscore2 {
+    background-color: #FDC889;
+}
+
+.newsscore3 {
+    background-color: #F59681;
+}
